RESOLVED FIXED54216
[V8] Don't crash on exception getting event handler function
https://bugs.webkit.org/show_bug.cgi?id=54216
Summary [V8] Don't crash on exception getting event handler function
Mads Ager
Reported 2011-02-10 09:15:03 PST
[V8] Don't crash on exception getting event handler function
Attachments
Patch (4.28 KB, patch)
2011-02-10 09:19 PST, Mads Ager
japhet: review+
Mads Ager
Comment 1 2011-02-10 09:19:20 PST
anton muhin
Comment 2 2011-02-10 12:23:32 PST
Comment on attachment 81991 [details] Patch LGTM, although those empty handle checks are somewhat sketchy. Still a common practice
Note You need to log in before you can comment on or make changes to this bug.