2011-02-10  Mads Ager  <ager@chromium.org>

Reviewed by Nate Chapin.

        [V8] Don't crash on exception getting event handler function
        https://bugs.webkit.org/show_bug.cgi?id=54216

        Check for exceptions when attempting to get the handleEvent property
        of an event-handler object.

        Test: fast/dom/exception-getting-event-handler.html

        * bindings/v8/V8EventListener.cpp:
        (WebCore::V8EventListener::getListenerFunction):
2011-02-10  Mads Ager  <ager@chromium.org>

        Reviewed by Nate Chapin.

        [V8] Don't crash on exception getting event handler function
        https://bugs.webkit.org/show_bug.cgi?id=54216

        Add crash regression test with custom chromium expectations.

        * fast/dom/exception-getting-event-handler-expected.txt: Added.
        * fast/dom/exception-getting-event-handler.html: Added.
        * platform/chromium/fast/dom/exception-getting-event-handler-expected.txt: Added.


Canonical link: https://commits.webkit.org/68326@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78316 268f45cc-cd09-0410-ab3c-d52691b4dbfc